removed redundant css

--- a/workshop/exercise-01/index.html
+++ b/workshop/exercise-01/index.html
@@ -6,13 +6,13 @@
 
 <body>
     <div class="container">
-        <nav class = "nav">
+        <nav class = "item center">
             Nav
         </nav>
-        <main class="content"> 
+        <main class="item content"> 
             <h1>CONTENT</h1>
         </main>
-        <footer class="footer">
+        <footer class="item center">
             Footer
         </footer>
     </div>
