added background color

--- a/workshop/exercise-01/index.html
+++ b/workshop/exercise-01/index.html
@@ -6,13 +6,13 @@
 
 <body>
     <div class="container">
-        <nav class = "item center">
+        <nav class = "item baritem">
             Nav
         </nav>
         <main class="item content"> 
             <h1>CONTENT</h1>
         </main>
-        <footer class="item center">
+        <footer class="item baritem">
             Footer
         </footer>
     </div>
