--- a/workshop/exercise-03/index.html
+++ b/workshop/exercise-03/index.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="main">
-        <h1>A New Beginning...</h1>
+    <div class="main center">
+        <h1>A New Beginning<h1>
     </div>
 </body>
 </html>
