--- a/workshop/exercise-04/index.html
+++ b/workshop/exercise-04/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-        <link type="css/stylesheet" src="style.css"/>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-
+        <h1>hello world</h1>
     </body>
 </html>
