--- a/workshop/exercise-04/index.html
+++ b/workshop/exercise-04/index.html
@@ -5,6 +5,15 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <h1>hello world</h1>
+        <nav class="dropdown">
+            <h1>Dropdown</h1>
+            <div class="dropdown-content">
+                <ul>
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                </ul>
+            </div>
+        </nav>
     </body>
 </html>
