static elements added

--- a/workshop/exercise-04/index.html
+++ b/workshop/exercise-04/index.html
@@ -5,6 +5,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     </head>
     <body>
-        Hello World
+        <div class="center">
+            <h2>Limited time</h2>
+            <h1>Get iPhone XR from $0 down.*</h1>
+            <p>Trade in your current iPhone and get an iPhone XR from $0 or iphone XS from $79 down at an Apple Store.
+            </p>
+            <p><a href="#">Find a store</a></p>
+        </div>
     </body>
 </html>
