--- a/workshop/exercise-04/index.html
+++ b/workshop/exercise-04/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="center">
-            <h2>Limited time</h2>
+            <h2 class="top-title">Limited time</h2>
             <h1>Get iPhone XR from $0 down.*</h1>
             <p>Trade in your current iPhone and get an iPhone XR from $0 or iphone XS from $79 down at an Apple Store.
             </p>
