--- a/workshop/exercise-04/index.html
+++ b/workshop/exercise-04/index.html
@@ -5,12 +5,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="center">
-            <h2 class="top-title">Limited time</h2>
+        <div class="main">
+            <span class="top-title">Limited time</span>
             <h1>Get iPhone XR from $0 down.*</h1>
-            <p>Trade in your current iPhone and get an iPhone XR from $0 or iphone XS from $79 down at an Apple Store.
-            </p>
-            <p><a href="#">Find a store</a></p>
+            <p>Trade in your current iPhone and get an iPhone XR from $0 or iphone XS from $79 down at an Apple Store.</p>
+            <a href="#" class="link">Find a store</a>
         </div>
     </body>
 </html>
