--- a/workshop/exercise-05/index.html
+++ b/workshop/exercise-05/index.html
@@ -6,7 +6,21 @@
     </head>
     <body>
         <div class="main">
-            <img class="item" src="imgs/product.jpg" />
+            <div>
+                <img class="item" src="imgs/product.jpg" />
+                <img class="item" src="imgs/product.jpg" />
+                <img class="item" src="imgs/product.jpg" />
+            </div>
+            <div>
+                <img class="item" src="imgs/product.jpg" />
+                <img class="item" src="imgs/product.jpg" />
+                <img class="item" src="imgs/product.jpg" />
+            </div>
+            <div>
+                <img class="item" src="imgs/product.jpg" />
+                <img class="item" src="imgs/product.jpg" />
+                <img class="item" src="imgs/product.jpg" />
+            </div>
         </div>
     </body>
 </html>
