--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link href="style.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
