--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -10,6 +10,13 @@
     <div class="nav">
         <span class="nav-dropdown">
             Dropdown
+            <div class="dropdown-menu">
+                <ul class="dropdown-list">
+                    <li> Item 1 </li>
+                    <li> Item 2 </li>
+                    <li> Item 3 </li>
+                </ul>
+            </div>
         </span>
     </div>
 </body>
