--- a/workshop/exercise-01/index.html
+++ b/workshop/exercise-01/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <link href="style.css" rel="stylesheet" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <nav class = "item baritem">
-            Nav
-        </nav>
-        <main class="item content"> 
-            <h1>CONTENT</h1>
-        </main>
-        <footer class="item baritem">
-            Footer
-        </footer>
+      <nav class="item nav">Nav</nav>
+      <div class="item content">Content</div>
+      <footer class="item footer">Footer</footer>
     </div>
-</body>
+  </body>
 </html>
