--- a/workshop/exercise-07/index.html
+++ b/workshop/exercise-07/index.html
@@ -1,26 +1,19 @@
 <html>
   <head>
+    <title>CB-NW-3 Workshop 3 - Exercise 7</title>
     <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
     <div class="container">
       <header>
-        <h1>
-          My Website
-        </h1>
+        <h1>My Website</h1>
 
         <nav class="desktop-nav">
           <ul>
-            <li>
-              Home
-            </li>
-            <li>
-              About
-            </li>
-            <li>
-              Contact
-            </li>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
           </ul>
         </nav>
 
