--- a/workshop/exercise-10/index.html
+++ b/workshop/exercise-10/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>CB-NW-3 Workshop 3 - Exercise 10</title>
     <link href="style.css" rel="stylesheet" />
   </head>
+
   <body>
     <div class="main">
       <div>
