--- a/workshop/exercise-08/index.html
+++ b/workshop/exercise-08/index.html
@@ -1,16 +1,13 @@
 <html>
   <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins"
-      rel="stylesheet"
-    />
+    <title>CB-NW-3 Workshop 3 - Exercise 8</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
   </head>
 
   <body>
-    <h1 class="header">
-      Registration form
-    </h1>
+    <h1 class="header">Registration form</h1>
+
     <form class="registration-form">
       <label>Username</label>
       <input type="text" required class="text-field" />
@@ -22,6 +19,7 @@
         <label>Email</label>
         <input type="email" required class="text-field" />
       </div>
+
       <div class="section">
         Which taxi do you require?
         <div>
@@ -29,17 +27,20 @@
             <input type="radio" name="vehicle" required /> Car
           </label>
         </div>
+
         <div>
           <label class="radio-label">
             <input type="radio" name="vehicle" required /> Van
           </label>
         </div>
+
         <div>
           <label class="radio-label">
             <input type="radio" name="vehicle" required /> Tuk Tuk
           </label>
         </div>
       </div>
+
       <div>
         Extras
         <div>
@@ -47,18 +48,21 @@
             <input type="checkbox" /> Baby Seat
           </label>
         </div>
+
         <div>
           <label class="checkbox-label">
             <input type="checkbox" />
             Wheelchair Access
           </label>
         </div>
+
         <div>
           <label class="checkbox-label">
             <input type="checkbox" /> Stock Tip
           </label>
         </div>
       </div>
+
       <div class="section">
         <label>
           Pickup
@@ -70,15 +74,15 @@
           </select>
         </label>
       </div>
+
       <div>
         <label>
           Special
           <textarea></textarea>
         </label>
       </div>
-      <button class="form-button">
-        Submit
-      </button>
+
+      <button class="form-button">Submit</button>
     </form>
   </body>
 </html>
