--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -1,16 +1,33 @@
-<!DOCTYPE html>
-<html>
 
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link href="style.css" rel="stylesheet" />
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <title>AR-Exercise 6</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+
+  <body>
 
 <body>
     <div class="nav">
         <span class="nav-dropdown">
-            Dropdown
+            <ul>
+                <li>Dropdown ▼</li>
+                    <ul role='menubar'>
+                        <li><a href="#">Amazing</a></li>
+                        <li><a href="#">Dropdown</a></li>
+                        <li><a href="#">Item 3</a></li>
+                    </ul>
+            </ul>
+            
+
         </span>
     </div>
-</body>
+
+    </body>
 
 </html>
