--- a/workshop/exercise-08/index.html
+++ b/workshop/exercise-08/index.html
@@ -1,10 +1,12 @@
-<html>
-  <head>
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins"
-      rel="stylesheet"
-    />
-    <link href="style.css" rel="stylesheet" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <title>AR-Exercise 8</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
@@ -40,7 +42,7 @@
           </label>
         </div>
       </div>
-      <div>
+      <div class='section'>
         Extras
         <div>
           <label class="checkbox-label">
@@ -73,8 +75,8 @@
       <div>
         <label>
           Special
-          <textarea></textarea>
         </label>
+        <textarea></textarea>
       </div>
       <button class="form-button">
         Submit
