--- a/workshop/exercise-09/index.html
+++ b/workshop/exercise-09/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style1.css" />
 </head>
 
 <body>
