--- a/workshop/exercise-16-optional/index.html
+++ b/workshop/exercise-16-optional/index.html
@@ -5,9 +5,24 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     </head>
     <body>
+        <h1>Part 1 - Button Sizes</h1>
         <div class="container">
             <button type="button" class="btn btn-primary btn-lg"> Large button</button>
             <button type="button" class="btn btn-secondary btn-lg"> Large button</button>
+        </div>
+        <div class="container">
+            <button type="button" class="btn btn-primary btn-sm"> Small button</button>
+            <button type="button" class="btn btn-secondary btn-sm"> Small button</button>
+        </div>
+        <h1>Part 2 - Block level butons</h1>
+        <div class="block-container">
+            <button type="button" class="btn btn-primary btn-lg btn-block"> Block level button</button>
+            <button type="button" class="btn btn-secondary btn-lg btn-block"> Block level button</button>
+        </div>
+        <h1>Part 3 - Opaque</h1>
+        <div class="block-container">
+            <button type="button" class="btn btn-primary btn-lg btn-block"> Primary button</button>
+            <button type="button" class="btn btn-secondary btn-lg btn-block"> Button</button>
         </div>
     </body>
 </html>
