--- a/workshop/exercise-16-optional/index.html
+++ b/workshop/exercise-16-optional/index.html
@@ -20,9 +20,9 @@
             <button type="button" class="btn btn-secondary btn-lg btn-block"> Block level button</button>
         </div>
         <h1>Part 3 - Opaque</h1>
-        <div class="block-container">
-            <button type="button" class="btn btn-primary btn-lg btn-block"> Primary button</button>
-            <button type="button" class="btn btn-secondary btn-lg btn-block"> Button</button>
+        <div class="container">
+            <button type="button" class="btn btn-primary btn-lg op"> Primary button</button>
+            <button type="button" class="btn btn-secondary btn-lg op"> Button</button>
         </div>
     </body>
 </html>
