--- a/workshop/exercise-17-optional/index.html
+++ b/workshop/exercise-17-optional/index.html
@@ -5,6 +5,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     </head>
     <body>
-        hello world
+        <div class="card">
+            <div class="card-header">
+                Featured
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go Somewhere</a>
+            </div>
+        </div>
     </body>
 </html>
