--- a/workshop/exercise-15-optional/index.html
+++ b/workshop/exercise-15-optional/index.html
@@ -6,13 +6,13 @@
   </head>
 
   <body>
-    <button class="btn btn-primary" type="button">Primary</button>
-    <button class="btn btn-secondary" type="button">Secondary</button>
-    <button class="btn btn-success" type="button">Success</button>
-    <button class="btn btn-danger" type="button">Danger</button>
-    <button class="btn btn-warning" type="button">Warning</button>
-    <button class="btn btn-info" type="button">Info</button>
-    <button class="btn btn-light" type="button">Light</button>
-    <button class="btn btn-dark" type="button">Dark</button>
+    <button class="btn btn-primary-outline" type="button">Primary</button>
+    <button class="btn btn-secondary-outline" type="button">Secondary</button>
+    <button class="btn btn-success-outline" type="button">Success</button>
+    <button class="btn btn-danger-outline" type="button">Danger</button>
+    <button class="btn btn-warning-outline" type="button">Warning</button>
+    <button class="btn btn-info-outline" type="button">Info</button>
+    <button class="btn btn-light-outline" type="button">Light</button>
+    <button class="btn btn-dark-outline" type="button">Dark</button>
   </body>
 </html>
