--- a/workshop/exercise-18-optional/index.html
+++ b/workshop/exercise-18-optional/index.html
@@ -12,9 +12,8 @@
             <ul class="list-group">
                 <li class="list-group-item">Cras justo odio</li>
                 <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="listgroup-item">Vestibulum at eros</li>
+                <li class="list-group-item">Vestibulum at eros</li>
             </ul>
-
         </div>
     </body>
 </html>
