--- a/workshop/exercise-01/index.html
+++ b/workshop/exercise-01/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Muli&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Muli&display=swap"
+      rel="stylesheet"
+    />
     <title>AR-Exercise 1</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -12,11 +18,11 @@
 
   <body>
     <div class="container">
-      <nav class = 'panel'>Nav</nav>
-      <div class = "panel content">
+      <nav class="panel">Nav</nav>
+      <div class="panel content">
         <p>CONTENT</p>
       </div>
-      <footer class = "panel">Footer</footer>
+      <footer class="panel">Footer</footer>
     </div>
   </body>
 </html>
