--- a/workshop/exercise-08/index.html
+++ b/workshop/exercise-08/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <title>AR-Exercise 8</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="style.css" />
@@ -16,10 +19,8 @@
     <form class="registration-form">
       <label>Username</label>
       <input type="text" required class="text-field" />
-
       <label>Password</label>
       <input type="password" required class="text-field" />
-
       <div>
         <label>Email</label>
         <input type="email" required class="text-field" />
@@ -28,21 +29,24 @@
         Which taxi do you require?
         <div>
           <label class="radio-label">
+            <span class="checkMark"></span>
             <input type="radio" name="vehicle" required /> Car
           </label>
         </div>
         <div>
           <label class="radio-label">
+            <span class="checkMark"></span>
             <input type="radio" name="vehicle" required /> Van
           </label>
         </div>
         <div>
           <label class="radio-label">
+            <span class="checkMark"></span>
             <input type="radio" name="vehicle" required /> Tuk Tuk
           </label>
         </div>
       </div>
-      <div class='section'>
+      <div class="section">
         Extras
         <div>
           <label class="checkbox-label">
