--- a/workshop/exercise-05/index.html
+++ b/workshop/exercise-05/index.html
@@ -1,32 +1,34 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <title>AR-Exercise 5</title>
     <link rel="icon" href="imgs/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
-    <div class = 'panel'>
-      <div class = "row">
-          <img src="imgs/product.jpg" alt ="A dream catcher"/>
-          <img src="imgs/product.jpg" alt ="A dream catcher"/>
-          <img src="imgs/product.jpg" alt ="A dream catcher"/>
+    <div class="panel">
+      <div class="row">
+        <img src="imgs/product.jpg" alt="A dream catcher" />
+        <img src="imgs/product.jpg" alt="A dream catcher" />
+        <img src="imgs/product.jpg" alt="A dream catcher" />
       </div>
-      <div class = "row">
-        <img src="imgs/product.jpg" alt ="A dream catcher"/>
-        <img src="imgs/product.jpg" alt ="A dream catcher"/>
-        <img src="imgs/product.jpg" alt ="A dream catcher"/>
-    </div>
-    <div class = "row">
-      <img src="imgs/product.jpg" alt ="A dream catcher"/>
-      <img src="imgs/product.jpg" alt ="A dream catcher"/>
-      <img src="imgs/product.jpg" alt ="A dream catcher"/>
-  </div>
+      <div class="row">
+        <img src="imgs/product.jpg" alt="A dream catcher" />
+        <img src="imgs/product.jpg" alt="A dream catcher" />
+        <img src="imgs/product.jpg" alt="A dream catcher" />
+      </div>
+      <div class="row">
+        <img src="imgs/product.jpg" alt="A dream catcher" />
+        <img src="imgs/product.jpg" alt="A dream catcher" />
+        <img src="imgs/product.jpg" alt="A dream catcher" />
+      </div>
     </div>
   </body>
 </html>
