--- a/workshop/exercise-08/index.html
+++ b/workshop/exercise-08/index.html
@@ -28,21 +28,24 @@
       <div class="section">
         Which taxi do you require?
         <div>
-          <label class="radio-label">
+          <label class="radio-label"
+            >Car
+            <input type="radio" name="vehicle" required />
             <span class="checkMark"></span>
-            <input type="radio" name="vehicle" required /> Car
           </label>
         </div>
         <div>
-          <label class="radio-label">
+          <label class="radio-label"
+            >Van
+            <input type="radio" name="vehicle" required />
             <span class="checkMark"></span>
-            <input type="radio" name="vehicle" required /> Van
           </label>
         </div>
         <div>
-          <label class="radio-label">
+          <label class="radio-label"
+            >Tuk Tuk
+            <input type="radio" name="vehicle" required />
             <span class="checkMark"></span>
-            <input type="radio" name="vehicle" required /> Tuk Tuk
           </label>
         </div>
       </div>
