--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <link href="style.css" rel="stylesheet" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="nav">
-        <span class="nav-dropdown">
+      <span class="nav-dropdown">
+        <ul>
+          <li style="background-color: #383737;">
             Dropdown
-        </span>
+            <ul>
+              <li>Amazing</li>
+              <li>dropdown</li>
+              <li>Item 3</li>
+            </ul>
+          </li>
+        </ul>
+      </span>
     </div>
-</body>
-
+  </body>
 </html>
