--- a/workshop/exercise-12-optional/index.html
+++ b/workshop/exercise-12-optional/index.html
@@ -7,17 +7,20 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
-    <title>AR-Exercise 10</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Muli&display=swap"
+      rel="stylesheet"
+    />
+    <title>AR-Exercise 12</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
-    <div class="main">
-      <div>
-        <h1 class="fast">Helloooooo</h1>
-        <button class="cool">Cool button</button>
-      </div>
+    <nav class="panel">Nav</nav>
+    <div class="panel content">
+      <p>CONTENT</p>
     </div>
+    <footer class="panel">Footer</footer>
   </body>
 </html>
