--- a/__solution/exercise-1/index.html
+++ b/__solution/exercise-1/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
+  <head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
     <link href="style.css" rel="stylesheet" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <nav class="bar center-content">
-            Nav
-        </nav>
-        <main class="main center-content">
-            <h1>CONTENT</h1>
-        </main>
-        <footer class="bar center-content">
-            Footer
-        </footer>
+      <nav class="bar content">
+        Nav
+      </nav>
+      <main class="main content">
+        CONTENT
+      </main>
+      <footer class="bar content">
+        Footer
+      </footer>
     </div>
-</body>
-
+  </body>
 </html>
