--- a/workshop/exercise-16-optional/index.html
+++ b/workshop/exercise-16-optional/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div class>
+    <div>
       <button type="button" class="btn btn-primary btn-lg">Large Button</button>
       <button type="button" class="btn btn-secondary btn-lg">Large Button</Button></Button></button>
     </div>
