1 to 18 Solved - Review

--- a/workshop/exercise-18-optional/index.html
+++ b/workshop/exercise-18-optional/index.html
@@ -14,9 +14,9 @@
         Featured
       </div>
       <ul class="list-group">
-        <li class="list-group-item"><p>Cras justo odio</p></li>
-        <li class="list-group-item"><p>Dapibus ac facilisis in</p></li>
-        <li class="list-group-item"><p>Vestibulum at eros</p></li>
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Dapibus ac facilisis in</li>
+        <li class="list-group-item">Vestibulum at eros</li>
       </ul>
     </div>
   </body>
