--- a/workshop/exercise-16-optional/index.html
+++ b/workshop/exercise-16-optional/index.html
@@ -22,7 +22,7 @@
       <button type="button" class="btn btn-secondary btn-lg">Large Button</Button></Button></button>
     </div>
     <hr>
-    <div class>
+    <div>
       <button type="button" class="btn btn-primary btn-sm">Small Button</button>
        <button type="button" class="btn btn-secondary btn-sm">Small Button</button>
     </div>
@@ -31,7 +31,6 @@
     <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
     <hr>
     <div>
-      
       <button type="button" class="btn btn-lg btn-primary" disabled>Primary button</button>
       <button type="button" class="btn btn-secondary btn-lg" disabled>Button</>
     </div>  
