--- a/__solution/exercise-2/index.html
+++ b/__solution/exercise-2/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="nav">
         <a href="#">
-            <img src="./imgs/icon.svg" class="logo" alt="Apple logo" />
+            <img src="/workshop/exercise-02/imgs/icon.svg" class="logo" alt="Apple logo" />
         </a>
         <a href="#">Mac</a>
         <a href="#">iPad</a>
