--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -9,6 +9,13 @@
     <div class="nav">
         <span class="nav-dropdown">
             Dropdown
+            <div class="dropdown-content">
+                <ul>
+               <li><a href="#">Amazing</a></li>
+                <li><a href="#">Dropdown</a></li>
+                <li><a href="#">Item 3</a></li>
+                </ul>
+              </div>
         </span>
     </div>
 </body>
