--- a/workshop/exercise-09/index.html
+++ b/workshop/exercise-09/index.html
@@ -1,5 +1,6 @@
 <head>
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -42,8 +43,8 @@
   <h3>Source:</h3>
   <ul class="links">
     <li>
-      <a target="_blank" href="https://en.wikipedia.org/wiki/Canada">Canada</a>
-    </li>
+   <a target="_blank" href="https://en.wikipedia.org/wiki/Canada"> Canada</a>
+      </li>
     <li>
       <a target="_blank" href="https://en.wikipedia.org/wiki/United_States">
         United States
