--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <link href="style.css" rel="stylesheet" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="nav">
-        <span class="nav-dropdown">
-            Dropdown
-        </span>
+      <span class="nav-dropdown">
+        Dropdown
+      </span>
+      <div class="menu">
+        <div class="menu-item">Amazing</div>
+        <div class="menu-item">Dropdown</div>
+        <div class="menu-item">Item 3</div>
+      </div>
     </div>
-</body>
-
+    <div>
+      Some Content Here
+    </div>
+  </body>
 </html>
