--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
+    <title>CB-NW-3 Workshop 3 - Exercise 6</title>
     <link href="style.css" rel="stylesheet" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="nav">
-        <span class="nav-dropdown">
-            Dropdown
-        </span>
+      <span class="nav-dropdown">Dropdown<ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul></span>
+      
     </div>
-</body>
-
+  </body>
 </html>
