--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -9,8 +9,18 @@
     <div class="nav">
         <span class="nav-dropdown">
             Dropdown
+            <div class="menu">
+                <ul>
+                    <li>Amazing</li>
+                    <li>Dropdown</li>
+                    <li>Item 3</li>
+                </ul>
+            </div>
         </span>
     </div>
+
+
+
 </body>
 
 </html>
