--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -7,12 +7,13 @@
 
   <body>
     <div class="nav">
-      <span class="nav-dropdown">Dropdown<ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-      </ul></span>
-      
+      <span class="nav-dropdown">Dropdown
+        <ul>
+          <li>Item 1</li>
+          <li>Item 2</li>
+          <li>Item 3</li>
+        </ul>
+      </span>
     </div>
   </body>
 </html>
