Complete exercices m1-3-htmlcss 1-10

--- a/workshop/exercise-01/index.html
+++ b/workshop/exercise-01/index.html
@@ -3,24 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exercice-6</title>
+  <title>Exercice-1</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
   <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
-  <div class="nav">
-    <span class="nav-dropdown">
-      Dropdown
-      <div class="dropdown-menu">
-        <ul class="menu-list">
-          <li>Amazing</li>
-          <li>Dropdown</li>
-          <li>Item 3</li>
-        </ul>
-      </div>
-    </span>
+  <div class="container">
+    <nav class="bar center-content">
+      Nav
+    </nav>
+    <main class="main center-content">
+      <h1>CONTENT</h1>
+    </main>
+    <footer class="bar center-content">
+      Footer
+    </footer>
   </div>
 </body>
 
-</html>
+</html> 
