--- a/workshop/exercise-03/index.html
+++ b/workshop/exercise-03/index.html
@@ -3,23 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exercice-6</title>
+  <title>Exercice-3</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
   <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
-  <div class="nav">
-    <span class="nav-dropdown">
-      Dropdown
-      <div class="dropdown-menu">
-        <ul class="menu-list">
-          <li>Amazing</li>
-          <li>Dropdown</li>
-          <li>Item 3</li>
-        </ul>
-      </div>
-    </span>
+  <div class="main center-content">
+    <h1>A new beginning</h1>
   </div>
 </body>
 
