--- a/workshop/exercise-07/index.html
+++ b/workshop/exercise-07/index.html
@@ -1,35 +1,39 @@
-<html>
-  <head>
-    <link href="style.css" rel="stylesheet" />
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exercice-7</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
+</head>
 
-  <body>
-    <div class="container">
-      <header>
-        <h1>
-          My Website
-        </h1>
+<body>
+  <div class="container">
+    <header>
+      <h1>
+        My Website
+      </h1>
+      <nav class="desktop-nav">
+        <ul>
+          <li>
+            Home
+          </li>
+          <li>
+            About
+          </li>
+          <li>
+            Contact
+          </li>
+        </ul>
+      </nav>
+      <nav class="mobile-nav">
+        <button class="mobile-nav-button" aria-label="Show menu">
+          <img src="hamburger.webp" />
+        </button>
+      </nav>
+    </header>
+  </div>
+</body>
 
-        <nav class="desktop-nav">
-          <ul>
-            <li>
-              Home
-            </li>
-            <li>
-              About
-            </li>
-            <li>
-              Contact
-            </li>
-          </ul>
-        </nav>
-
-        <nav class="mobile-nav">
-          <button class="mobile-nav-button" aria-label="Show menu">
-            <img src="hamburger.webp" />
-          </button>
-        </nav>
-      </header>
-    </div>
-  </body>
 </html>
