--- a/workshop/exercise-10/index.html
+++ b/workshop/exercise-10/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link href="style.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div class="main">
-      <div>
-        <h1 class="fast">Helloooooo</h1>
-        <button class="cool">Cool button</button>
-      </div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exercice-10</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="main">
+    <div>
+      <h1 class="fast">Helloooooo</h1>
+      <button class="cool">Cool button</button>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
