--- a/workshop/exercise-02/index.html
+++ b/workshop/exercise-02/index.html
@@ -3,24 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Exercice-6</title>
+  <title>Exercice-2</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
   <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
-  <div class="nav">
-    <span class="nav-dropdown">
-      Dropdown
-      <div class="dropdown-menu">
-        <ul class="menu-list">
-          <li>Amazing</li>
-          <li>Dropdown</li>
-          <li>Item 3</li>
-        </ul>
-      </div>
-    </span>
-  </div>
+  <nav class="nav">
+    <a href="#">
+      <img src="./imgs/icon.svg" class="logo" alt="Apple logo" />
+    </a>
+    <a href="#">Mac</a>
+    <a href="#">iPad</a>
+    <a href="#">iPhone</a>
+    <a href="#">TV</a>
+  </nav>
 </body>
 
 </html>
