--- a/workshop/exercise-09/index.html
+++ b/workshop/exercise-09/index.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exercice-9</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -57,3 +63,5 @@
     </li>
   </ul>
 </body>
+
+</html>
