--- a/workshop/exercise-08/index.html
+++ b/workshop/exercise-08/index.html
@@ -16,8 +16,9 @@
       <input type="text" required class="text-field" />
 
       <label>Password</label>
-      <input type="password" required class="text-field" />
-      <div>
+      <input type="text" required class="text-field" />
+
+      <div style=>
         <label>Email</label>
         <input type="email" required class="text-field" />
       </div>
