--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -9,6 +9,13 @@
     <div class="nav">
         <span class="nav-dropdown">
             Dropdown
+            <nav>
+                <ul>
+                    <li>Test 1</li>
+                    <li>Test 2</li>
+                    <li>Test 3</li>
+                </ul>
+            </nav>
         </span>
     </div>
 </body>
