--- a/workshop/exercise-01/index.html
+++ b/workshop/exercise-01/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <div class="container">
-      <nav class="bar center-content">
+      <nav class="bar center-content"></nav>
         NAV
       </nav>
       <main class="main center-content" 
