--- a/workshop/exercise-07/index.html
+++ b/workshop/exercise-07/index.html
@@ -10,6 +10,8 @@
           My Website
         </h1>
 
+
+        <!-- DESKTOP -->
         <nav class="desktop-nav">
           <ul>
             <li>
@@ -24,6 +26,8 @@
           </ul>
         </nav>
 
+
+          <!-- MOBILE -->
         <nav class="mobile-nav">
           <button class="mobile-nav-button" aria-label="Show menu">
             <img src="hamburger.webp" />
