--- a/workshop/exercise-09/index.html
+++ b/workshop/exercise-09/index.html
@@ -3,6 +3,7 @@
 </head>
 
 <body>
+  <div class="container">
   <h1 class="header">Here are some geography facts</h1>
   <table class="facts">
     <tbody>
@@ -56,4 +57,5 @@
       <a target="_blank" href="https://en.wikipedia.org/wiki/Japan">Japan</a>
     </li>
   </ul>
+</div>  
 </body>
